--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -11,9 +11,8 @@
     <img th:src="@{/images/logo.png}" width="250">
 
     <div>
-        <a th:href="@{/bebedores}" class="btn btn-primary">Bebedores</a>
-        <a th:href="@{/bares}" class="btn btn-primary">Bares</a>
-        <a th:href="@{/bebidas}" class="btn btn-primary">Bebidas</a>
+        <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
+        <a th:href="@{/ofertasHabitacion}" class="btn btn-primary">Habitaciones</a>
     </div>
     <br/>
 
