--- a/app/src/main/resources/templates/usuarios.html
+++ b/app/src/main/resources/templates/usuarios.html
@@ -30,7 +30,7 @@
                     <th>ID</th>
                     <th>Nombre</th>
                     <th>Documento</th>
-                    <th>Tipo Documento</th>
+                    <th>TipoDocumento</th>
                     <th>Rol</th>
                     <th>Correo</th>
                     <th>Contrasena</th>
@@ -42,7 +42,7 @@
                         <td th:text="${usuario.id}"></td>
                         <td th:text="${usuario.nombre}"></td>
                         <td th:text="${usuario.documento}"></td>
-                        <td th:text="${usuario.tipoDocumento}"></td>
+                        <td th:text="${usuario.tipodocumento}"></td>
                         <td th:text="${usuario.rol}"></td>
                         <td th:text="${usuario.correo}"></td>
                         <td th:text="${usuario.contrasena}"></td>
