--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <div>
         <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
         <a th:href="@{/ofertasHabitacion}" class="btn btn-primary">Habitaciones</a>
+        <a th:href="@{/reservas}" class="btn btn-primary">Reservas</a>
     </div>
     <br/>
 
