--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -14,6 +14,7 @@
         <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
         <a th:href="@{/ofertasHabitacion}" class="btn btn-primary">Habitaciones</a>
         <a th:href="@{/reservas}" class="btn btn-primary">Reservas</a>
+        <a th:href="@{/planes}" class="btn btn-primary">Planes</a>
     </div>
     <br/>
 
