RF6 Casi terminado

--- a/app/src/main/resources/templates/planNuevo.html
+++ b/app/src/main/resources/templates/planNuevo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form th:action="@{/planes/new/save}" method="post">
-        <div th:replace="~{fragments/planForm :: planForm(titulo='Crear Plan de Consumo')}">
+        <div th:replace="~{fragments/planForm :: planForm(titulo='Crear Plan')}">
 
         </div>
     </form>
