--- a/app/src/main/resources/templates/planEditar.html
+++ b/app/src/main/resources/templates/planEditar.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editar Plan</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+    <title>Editar un plan</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" />
+    //JA
 </head>
 <body>
-    <form th:action="@{'/planes/' + ${nombre} + '/edit/save'}" th:object="${plan}" method="post">
-        <div th:replace="~{fragments/planForm :: planForm(titulo='Editar plan', plan=${plan})}"></div>
-    </form>
-    
+</br>
+<form th:action="@{'/planes/' + ${id} + '/edit/save'}" th:object="${planes}" method="post">
+    <div th:replace="~{fragments/planForm :: planForm(titulo='Editar un plan', plan=${plan})}">
+    </div>
+</form>
+
 </body>
 </html>
