--- a/app/src/main/resources/templates/reservas.html
+++ b/app/src/main/resources/templates/reservas.html
@@ -14,7 +14,7 @@
 
 
         <br />
-        <form th:action="@{reservas}" method="get">
+        <form th:action="@{/reservas}" method="get">
             <div class="input-group input-group-sm mb-2 justify-content-center">
                 <input class='w-25' id="txtSearch" type="text" name="id">
                 <div class="input-group-append">
