--- a/app/src/main/resources/templates/fragments/planForm.html
+++ b/app/src/main/resources/templates/fragments/planForm.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragmento</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" />
 
 </head>
+
 <body>
 
+    </br>
     <div th:fragment="planForm(titulo)" class="container border border-2 w-25">
         <h1 class="text-center" th:text="${titulo}"></h1>
+    
     <form>
-        <label class="col-form-label">Tipo</label>
-        <input class="form-control " type="text" id="tipo"
-        name="tipo" required th:value="${plan.tipo}"/>
+            
+        <label class="col-form-label" for="tipo">Tipo:</label>
+        <select class="form-control" id="tipo" name="tipo" required>
+            <option value="Larga Estadía" th:selected="${usuario.tipo eq 'Larga Estadia'}">LA</option>
+            <option value="Tiempo Compartido" th:selected="${usuario.tipo eq 'Tiempo Compartido'}">TC</option>
+            <option value="Todo Incluido" th:selected="${usuario.tipo eq 'Todo Incluido'}">TI</option>
+            <option value="Promociones Particulares" th:selected="${usuario.tipo eq 'Promociones Particulares'}">PP</option>
+        </select>
 
-        <label class="col-form-label">Descripcion</label>
-        <input class="form-control" type="text" id="descripcion"
-        name="descripcion" required th:value="${plan.descripcion}"/>
-
+        <label class="col-form-label">Descripcion:</label>
+        <input class="form-control" type="text" id="descripcion" name="descripcion" required th:value="${plan.descripcion}" />
+        
+        </select>
         <div class="text-center">
             <input type="submit" value="Guardar" class="btn btn-primary">
-            <a th:href="@{/planes}" class="btn btn-primary">Cancelar</a>
+            <a th:href="@{/reservas}" class="btn btn-primary">Cancelar</a>
         </div>
     </form>
-    
+
     </br>
-    </div>
-    
+</div>
+
 </body>
+
 </html>
