--- a/app/src/main/resources/templates/planNuevo.html
+++ b/app/src/main/resources/templates/planNuevo.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Plan</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}"/>
+    <title>Crear nuevo plan</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" />
+
 </head>
 <body>
-    <form th:action="@{/planes/new/save}" method="post">
-        <div th:replace="~{fragments/planForm :: planForm(titulo='Crear Plan')}">
-
-        </div>
+</br>
+<form th:action="@{/planes/new/save}" method="post">
+    <div th:replace="~{fragments/planForm :: planForm(titulo='Crear nuevo plan')}">
     </form>
+    </div>
+    
 </body>
 </html>
