--- a/app/src/main/resources/templates/planes.html
+++ b/app/src/main/resources/templates/planes.html
@@ -27,7 +27,7 @@
             <div class="col-6">
                 <form th:action="@{/planes/tipo}" method="get">
                     <div class="input-group input-group-sm mb-2">
-                        <input class='form-control' id="txtSearch" type="text" name="rol">
+                        <input class='form-control' id="txtSearch" type="text" name="tipo">
                         <div class="input-group-append">
                             <button type="submit" class="btn btn-secondary">Buscar por Tipo</button>
                         </div>
