update rf9 y rf11 done

--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
         <a th:href="@{/reservas}" class="btn btn-primary">Reservas</a>
         <a th:href="@{/planes}" class="btn btn-primary">Planes</a>
         <a th:href="@{/servicioreservas}" class="btn btn-primary">Reservas de Servicios</a>
+        <a th:href="@{/registros}" class="btn btn-primary">Registrar llegada/salida cliente</a>
     </div>
     <br/>
 
