--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
         <a th:href="@{/planes}" class="btn btn-primary">Planes</a>
         <a th:href="@{/servicioreservas}" class="btn btn-primary">Reservas de Servicios</a>
         <a th:href="@{/registros}" class="btn btn-primary">Registrar llegada/salida cliente</a>
+        <a th:href="@{/serviciosconsumo}" class="btn btn-primary">Consumo de servicios</a>
     </div>
     <br/>
 
