RF3, RF4 casi completos

--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 
     <div>
         <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
-        <a th:href="@{/ofertasHabitacion}" class="btn btn-primary">Habitaciones</a>
+        <a th:href="@{/habitaciones}" class="btn btn-primary">Habitaciones</a>
         <a th:href="@{/reservas}" class="btn btn-primary">Reservas</a>
         <a th:href="@{/planes}" class="btn btn-primary">Planes</a>
         <a th:href="@{/servicioreservas}" class="btn btn-primary">Reservas de Servicios</a>
