--- a/app/src/main/resources/templates/fragments/habitacionForm.html
+++ b/app/src/main/resources/templates/fragments/habitacionForm.html
@@ -15,7 +15,7 @@
     
     <form>
         <label class="col-form-label">Capacidad:</label>
-        <input class="form-control" type="text" id="capacidad" name="capacidad" required th:value="${habitacion.capacidad}" />
+        <input class="form-control" type="number" id="capacidad" name="capacidad" required th:value="${habitacion.capacidad}" />
         
         <label class="col-form-label" for="tipo">Tipo:</label>
         <select class="form-control" id="tipo" name="tipo" required>
@@ -29,11 +29,11 @@
         <label class="col-form-label">Dotacion:</label>
         <input class="form-control" type="text" id="dotacion" name="dotacion" required th:value="${habitacion.dotacion}" />
 
-        <label class="col-form-label">PrecioNoche:</label>
-        <input class="form-control" type="text" id="precionoche" name="precionoche" required th:value="${habitacion.precionoche}" />        
+        <label class="col-form-label">Precio Noche:</label>
+        <input class="form-control" type="number" id="precio_noche" name="precio_noche" required th:value="${habitacion.precionoche}" />        
 
-        <label class="col-form-label">ConsumoExtra:</label>
-        <input class="form-control" type="text" id="consumoextra" name="consumoextra" required th:value="${habitacion.consumoextra}" />
+        <label class="col-form-label">Consumo Extra:</label>
+        <input class="form-control" type="number" id="consumo_extra" name="consumo_extra" required th:value="${habitacion.consumoextra}" />
 
         </select>
         <div class="text-center">
