--- a/app/src/main/resources/templates/fragments/habitacionForm.html
+++ b/app/src/main/resources/templates/fragments/habitacionForm.html
@@ -30,10 +30,10 @@
         <input class="form-control" type="text" id="dotacion" name="dotacion" required th:value="${habitacion.dotacion}" />
 
         <label class="col-form-label">Precio Noche:</label>
-        <input class="form-control" type="number" id="precio_noche" name="precio_noche" required th:value="${habitacion.precionoche}" />        
+        <input class="form-control" type="number" id="precionoche" name="precionoche" required th:value="${habitacion.precionoche}" />        
 
         <label class="col-form-label">Consumo Extra:</label>
-        <input class="form-control" type="number" id="consumo_extra" name="consumo_extra" required th:value="${habitacion.consumoextra}" />
+        <input class="form-control" type="number" id="consumoextra" name="consumoextra" required th:value="${habitacion.consumoextra}" />
 
         </select>
         <div class="text-center">
