--- a/app/src/main/resources/templates/indexGerente.html
+++ b/app/src/main/resources/templates/indexGerente.html
@@ -11,7 +11,8 @@
     <img th:src="@{/images/logo.png}" width="250">
 
     <div>
-        <a th:href="@{/login}" class="btn btn-primary">Login</a>
+        <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
+        <a th:href="@{/habitaciones}" class="btn btn-primary">Habitaciones</a>
     </div>
     <br/>
 
