--- a/app/src/main/resources/templates/fragments/servicioreservasForm.html
+++ b/app/src/main/resources/templates/fragments/servicioreservasForm.html
@@ -23,14 +23,8 @@
         <input class="form-control" type="text" id="fechafinal" name="fechafinal" required th:value="${reserva.fechafinal}" />
         <label class="col-form-label">idHabitacion:</label>
         <input class="form-control" type="text" id="idhabitacion" name="idhabitacion" required th:value="${reserva.idhabitacion}" />
-        <label class="col-form-label">idSpa:</label>
-        <input class="form-control" type="text" id="idspa" name="idspa" required th:value="${reserva.idspa}" />
-        <label class="col-form-label">idSalon:</label>
-        <input class="form-control" type="text" id="idsalon" name="idsalon" required th:value="${reserva.idsalon}" />
-        <label class="col-form-label">idLavanderia:</label>
-        <input class="form-control" type="text" id="idlavanderia" name="idlavanderia" required th:value="${reserva.idlavanderia}" />
-        
-
+        <label class="col-form-label">tipo:</label>
+        <input class="form-control" type="text" id="tipo" name="tipo" required th:value="${reserva.tipo}" />
         </select>
         <div class="text-center">
             <input type="submit" value="Guardar" class="btn btn-primary">
