--- a/app/src/main/resources/templates/servicioreservas.html
+++ b/app/src/main/resources/templates/servicioreservas.html
@@ -24,6 +24,23 @@
         </form>
         <br />
 
+        <div class="d-flex justify-content-center">
+            <form id="searchByFrecuenciaForm" th:action="@{/servicioreservas/frecuencia}" method="get">
+                <div class="input-group input-group-sm mb-2">
+                    <div class="input-group-append">
+                        <button type="button" id="searchByFrecuenciaButton" class="btn btn-secondary">Buscar por menor frecuencia</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    
+        <script>
+                document.getElementById('searchByFrecuenciaButton').addEventListener('click', function() {
+                document.getElementById('searchByFrecuenciaForm').submit();
+            });
+        </script>
+    
+
         <table class="table table-condensed table-hover table-bordered" style="border-collapse:collapse;">
             <thead class="thead-dark">
                 <tr>
