--- a/app/src/main/resources/templates/fragments/servicioreservasForm.html
+++ b/app/src/main/resources/templates/fragments/servicioreservasForm.html
@@ -25,6 +25,8 @@
         <input class="form-control" type="text" id="idhabitacion" name="idhabitacion" required th:value="${reserva.idhabitacion}" />
         <label class="col-form-label">tipo:</label>
         <input class="form-control" type="text" id="tipo" name="tipo" required th:value="${reserva.tipo}" />
+        <label class="col-form-label">precio:</label>
+        <input class="form-control" type="text" id="precio" name="precio" required th:value="${reserva.precio}" />
         </select>
         <div class="text-center">
             <input type="submit" value="Guardar" class="btn btn-primary">
