--- a/app/src/main/resources/templates/servicioreservasFrecuencia.html
+++ b/app/src/main/resources/templates/servicioreservasFrecuencia.html
@@ -25,6 +25,6 @@
             </tr>
         </tbody>
     </table>
-    <a th:href="@{/serviciosreserva}">Volver atrás</a>
+    <a th:href="@{/servicioreservas}">Volver atrás</a>
 </body>
 </html>
