--- a/app/src/main/resources/templates/dineroRecolectadoPorServicios.html
+++ b/app/src/main/resources/templates/dineroRecolectadoPorServicios.html
@@ -22,21 +22,20 @@
             </thead>
             <tbody>
                 <!-- Itera sobre los resultados y muestra cada uno -->
-                <th:block th:each="resultado : ${resultados}">
-                    <tr>
-                        <td th:text="${resultado.servicio}"></td>
-                        <td th:text="${resultado.dineroRecolectado}"></td>
-                        <td>
-                            <!-- Agrega un enlace para ver detalles del resultado -->
-                            <a th:href="@{/detalleResultado/{id}(id=${resultado.id})}">Ver Detalles</a>
-                        </td>
-                    </tr>
-                </th:block>
+                <th:block th:each="resultado : ${dineroRecolectadoPorServicios}">
+    <tr>
+        <td th:text="${resultado.idHabitacion}"></td>
+        <td th:text="${resultado.dineroRecolectado}"></td>
+        <td>
+            <!-- Agrega un enlace para ver detalles del resultado -->
+            <a th:href="@{/detalleResultado/{id}(id=${resultado.idHabitacion})}">Ver Detalles</a>
+        </td>
+    </tr>
+</th:block>
             </tbody>
         </table>
         
         <div class="text-center">
-            <a th:href='@{otroRequerimiento}' class="btn btn-primary">Otro Requerimiento</a>
             <a th:href="@{/}" class="btn btn-primary"> Volver Atrás</a>
         </div>
     </div>
