--- a/app/src/main/resources/templates/indexGerente.html
+++ b/app/src/main/resources/templates/indexGerente.html
@@ -13,6 +13,8 @@
     <div>
         <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
         <a th:href="@{/habitaciones}" class="btn btn-primary">Habitaciones</a>
+        <a th:href="@{/dineroRecolectadoPorServicios}" class="btn btn-primary">Dinero Recolectado por Servicios</a>
+
     </div>
     <br/>
 
