--- a/app/src/main/resources/templates/indexGerente.html
+++ b/app/src/main/resources/templates/indexGerente.html
@@ -14,6 +14,7 @@
         <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
         <a th:href="@{/habitaciones}" class="btn btn-primary">Habitaciones</a>
         <a th:href="@{/dineroRecolectadoPorServicios}" class="btn btn-primary">Dinero Recolectado por Servicios</a>
+        <a th:href="@{/servicioreservas/populares}" class="btn btn-primary">Servicios Populares</a>
 
     </div>
     <br/>
