--- a/app/src/main/resources/templates/indexGerente.html
+++ b/app/src/main/resources/templates/indexGerente.html
@@ -15,6 +15,7 @@
         <a th:href="@{/habitaciones}" class="btn btn-primary">Habitaciones</a>
         <a th:href="@{/dineroRecolectadoPorServicios}" class="btn btn-primary">Dinero Recolectado por Servicios</a>
         <a th:href="@{/servicioreservas/populares}" class="btn btn-primary">Servicios Populares</a>
+        <a th:href="@{/reservas/indiceocupacion}" class="btn btn-primary">Indice de Ocupación por Habitación</a>
 
     </div>
     <br/>
