--- a/app/src/main/resources/templates/indexRecepcionista.html
+++ b/app/src/main/resources/templates/indexRecepcionista.html
@@ -12,6 +12,7 @@
 
     <div>
         <a th:href="@{/registros}" class="btn btn-primary">Registrar llegada/salida cliente</a>
+        <a th:href="@{/usuarios}" class="btn btn-primary">Consultar Consumo</a>
 
     </div>
     <br/>
