--- a/app/src/main/resources/templates/indexGerente.html
+++ b/app/src/main/resources/templates/indexGerente.html
@@ -13,6 +13,7 @@
     <div>
         <a th:href="@{/usuarios}" class="btn btn-primary">Usuarios</a>
         <a th:href="@{/habitaciones}" class="btn btn-primary">Habitaciones</a>
+        <a th:href="@{/serviciosconsumo}" class="btn btn-primary">Habitaciones</a>
     </div>
     <br/>
 
